# embedding-visualizer

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  ruff.toml
app/: config.py
app/api/: dependencies.py  router.py
app/models/: schemas.py
app/services/: cache.py  dimensionality.py  embedding.py
app/utils/: logger.py
tests/: conftest.py  test_main.py
tests/test_api/: test_dependencies.py  test_router.py
tests/test_services/: test_cache.py  test_dimensionality.py  test_embedding.py
ui/: .env.example  .env.local  .prettierrc.json  README.md  package.json  pnpm-lock.yaml
ui/src/app/: PostHogPageView.tsx  layout.tsx  page.tsx  providers.tsx
ui/src/components/: GitHubButton.tsx  Introduction.tsx  RawEmbeddings.tsx  TextInputForm.tsx  VisualizationTabs.tsx
ui/src/components/ui/: button.tsx
ui/src/components/visualization/: ThreeDimensional.tsx  TwoDimensional.tsx
ui/src/hooks/: useAuthenticatedFetch.ts
ui/src/lib/: api.ts  emotionsColorsShapesResult.json  mixedSentencesResult.json  petsFinanceFruitsVehiclesResult.json  presets.ts  types.ts  weatherEmotionsResult.json
